manifest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-api
  namespace: my-api-namespace
spec:
  containers:
  - name: echo-container
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
